force-app/main/default/objects/Quote_Document_Schedule__mdt/Quote_Document_Schedule__mdt.object-meta.xml
<CustomObject>
    <label>Quote Document Schedule</label>
    <pluralLabel>Quote Document Schedules</pluralLabel>
</CustomObject>