force-app/main/default/objects/Quote_Document_Schedule__mdt/fields/Bucket_Code__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Code__c</fullName>
    <inlineHelpText>Stable identity for this section - MILESTONE_SIGNING, DEPT_WEST, MONTH_01. Never printed: it is what row keys are built from, so changing it changes the identity a renderer binds to.</inlineHelpText>
    <label>Bucket Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>