force-app/main/default/objects/Quote_Document_Schedule__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <inlineHelpText>Order of this section within its schedule. Use increments of ten so a section can be inserted later without renumbering.</inlineHelpText>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>