force-app/main/default/objects/Quote_Document_Schedule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Inactive rows are ignored entirely, so a schedule can be drafted without affecting any document.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>