force-app/main/default/objects/Quote_Document_Schedule__mdt/fields/Label_Arg_1__c.field-meta.xml
<CustomField>
    <fullName>Label_Arg_1__c</fullName>
    <inlineHelpText>Fills the {0} placeholder in Label Key, so one parameterised dictionary entry serves a whole schedule - twelve promotional months share MONTH_LABEL and supply 1..12 here rather than needing twelve entries. Leave blank for a key with no placeholder, such as a named milestone.</inlineHelpText>
    <label>Label Argument 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>