force-app/main/default/objects/Quote_Document_Schedule__mdt/fields/Label_Key__c.field-meta.xml
<CustomField>
    <fullName>Label_Key__c</fullName>
    <inlineHelpText>Dictionary key for the printed heading of this section, resolved through Quote_Document_Key_Value__mdt. Not the heading itself: no printable string is authored here, so the same schedule prints in any locale that has the entry.</inlineHelpText>
    <label>Label Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>