force-app/main/default/objects/Quote_Document_Schedule__mdt/fields/Schedule_Code__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Code__c</fullName>
    <inlineHelpText>Groups the rows of one schedule. A table definition names this code in its own Schedule Code field. Rows sharing a code are one schedule, ordered by Display Order.</inlineHelpText>
    <label>Schedule Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>