force-app/main/default/objects/Quote_Document_Schedule__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <inlineHelpText>This section RELATIVE share. 30/40/30 and 3/4/3 split identically - they are proportions, not percentages, so weights that sum to 90 still allocate the whole amount. A weight of zero is a genuinely free section: it receives exactly zero and never the rounding residual, which is what stops a promotional free month printing one cent.</inlineHelpText>
    <label>Weight</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>